# prowlarr-orionoid

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  __version__.py  config.py  docker-compose.yml  main.py  orionoid_client.py  pyproject.toml  requirements.txt  torznab_builder.py
.github/workflows/: ci.yml  docker-publish.yml  release.yml
tests/: conftest.py  test_api.py  test_health.py  test_torznab_builder.py
